# Fourier-Transform

./: CMakeLists.txt  github_save.sh  github_save_FT_ILYJNY.sh  main.cpp  main.h  programs_list.txt
Discrete Fourier Transform/Discrete Fourier Transform/: main.cpp  main.h
Discrete Fourier Transforms/Discrete Fourier Transform/: DFT.cpp  main.cpp  main.h
Fast Fourier Transform/: FFT&IFFT.cpp  FFT.cpp
gnuplot/: pGNUPlot.cpp
