cmake_minimum_required(VERSION 3.27)
project(Fourier_transforms)

set(CMAKE_CXX_STANDARD 17)

add_executable(Fourier_transforms main.cpp
        main.h
        #        "Discrete Fourier Transform/Discrete Fourier Transform/main.cpp"
#        "Discrete Fourier Transform/Discrete Fourier Transform/main.h"
)
