cmake_minimum_required(VERSION 3.27)
project(Fourier_transforms)

set(CMAKE_CXX_STANDARD 23)

add_executable(Fourier_transforms main.cpp
#        main.h
#        "Discrete Fourier Transforms/Discrete Fourier Transform/main.cpp"
#        "Discrete Fourier Transforms/Discrete Fourier Transform/main.h"
)
